feat: Add font, global styles and playground page

--- a/src/pages/playground/index.astro
+++ b/src/pages/playground/index.astro
@@ -1,9 +1,9 @@
 ---
-import Main from "./layouts/Main.astro";
+import Main from "../layouts/Main.astro";
 ---
 
-<Main title="Dominic Brauer">
-	<h1>Dominic Brauer</h1>
+<Main>
+	<canvas />
 </Main>
 
 <style>
@@ -15,3 +15,7 @@ import Main from "./layouts/Main.astro";
 		transform: translate(-50%, -50%);
 	}
 </style>
+
+<script>
+
+</script>
