fix: Adjust canvas size

--- a/src/components/BackgroundAnimation.astro
+++ b/src/components/BackgroundAnimation.astro
@@ -2,6 +2,14 @@
 	<canvas id="background-animation-canvas"></canvas>
 </div>
 
+<style>
+  .background-animation-container {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  }
+</style>
+
 <script>
 	let canvas: HTMLCanvasElement;
 	let background: BackgroundAnimation;
