--- a/src/pages/layouts/Main.astro
+++ b/src/pages/layouts/Main.astro
@@ -1,4 +1,5 @@
 ---
+import NavBar from '../../components/NavBar.astro';
 import '../../styles/global.css'
 
 const { title } = Astro.props;
@@ -13,6 +14,7 @@ const { title } = Astro.props;
 		<title>{ title }</title>
 	</head>
 	<body>
+		<NavBar />
 		<slot />
 	</body>
 </html>
