--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
 }
 
 :root {
-	--primary: #A20306; /* my birthday is the 20.03.2006 */
+	--primary: #A20306;
 	--primary-rgb: 162, 3, 6;
 	--background: #101010;
 	--background-container: #171616;
@@ -21,10 +21,11 @@
 	color: var(--text-primary);
 	margin: 0;
 	box-sizing: border-box;
-	font-weight: 400;
 }
 
 html, body {
+	width: 100%;
+	height: 100%;
 	background-color: var(--background);
 }
 
