--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,6 +1,6 @@
 ---
-import NavBar from '../../components/NavBar.astro';
-import '../../styles/global.css'
+import NavBar from '../components/NavBar.astro';
+import '../styles/global.css'
 
 const { title } = Astro.props;
 ---
@@ -11,10 +11,17 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{ title }</title>
+		<title>{title}</title>
 	</head>
-	<body>
+	<body class="cflex">
 		<NavBar />
 		<slot />
 	</body>
 </html>
+
+<style>
+	body {
+		align-items: center;
+		padding-top: calc(var(--nav-bar-height) + 2rem);
+	}
+</style>
