fix: Change import path

--- a/src/pages/playground/index.astro
+++ b/src/pages/playground/index.astro
@@ -1,6 +1,6 @@
 ---
 import BackgroundAnimation from "../../components/BackgroundAnimation.astro";
-import Main from "../layouts/Main.astro";
+import Main from "../../layouts/Main.astro";
 ---
 
 <Main>
