fix: Change class selection for text color

--- a/src/components/SongDisplay.astro
+++ b/src/components/SongDisplay.astro
@@ -112,6 +112,9 @@ const data: SpotifyWebAPICurrentlyPlayingResponse | undefined = await api.reques
 
 	.artists-wrapper, .album-wrapper {
 		gap: 6px;
+	}
+
+	(.artists-wrapper, .album-wrapper) span, a {
 		color: var(--text-secondary);
 	}
 
