--- a/src/components/SongDisplay.astro
+++ b/src/components/SongDisplay.astro
@@ -114,7 +114,7 @@ const data: SpotifyWebAPICurrentlyPlayingResponse | undefined = await api.reques
 		gap: 6px;
 	}
 
-	(.artists-wrapper, .album-wrapper) span, a {
+	.artists-wrapper span, .artists-wrapper a, .album-title {
 		color: var(--text-secondary);
 	}
 
