--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,6 +1,7 @@
 ---
-import NavBar from '../components/NavBar.astro';
-import '../styles/global.css'
+import NavBar from "@/components/NavBar.astro";
+import "@/styles/global.css";
+import "@/styles/sizing.css";
 
 const { title } = Astro.props;
 ---
