--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,6 @@
 ---
-import { SpotifyWebAPI, type SpotifyWebAPICurrentlyPlayingResponse } from "../lib/SpotifyWebAPI";
-import Main from "../layouts/Main.astro";
-import SongDisplay from "../components/SongDisplay.astro";
-
-// const api = new SpotifyWebAPI();
-// const data: SpotifyWebAPICurrentlyPlayingResponse | undefined = await api.requestCurrentlyPlaying();
+import Main from "@/layouts/Main.astro";
+import SongDisplay from "@/components/SongDisplay.astro";
 ---
 
 <Main title="Dominic Brauer">
