--- a/src/components/SlideLink.astro
+++ b/src/components/SlideLink.astro
@@ -1,5 +1,5 @@
 ---
-import HomeIcon from '../assets/icons/house.svg';
+import HomeIcon from "@/assets/icons/house.svg";
 ---
 
 <div class="nav-bar-container">
